refactor: Deck의 자료구조를 Deque으로 변경